update ITE simulation, IST Stroke trial and thesis

--- a/presentation_report/literature/bibSTA490.bib
+++ b/presentation_report/literature/bibSTA490.bib
@@ -296,4 +296,19 @@ year = {2024}
 }
 
 
+@article{herzog2023,
+author = {Herzog, Lisa and Kook, Lucas and Götschi, Andrea and Petermann, Katrin and Hänsel, Martin and Hamann, Janne and Dürr, Oliver and Wegener, Susanne and Sick, Beate},
+title = {Deep transformation models for functional outcome prediction after acute ischemic stroke},
+journal = {Biometrical Journal},
+volume = {65},
+number = {6},
+pages = {2100379},
+keywords = {deep learning, distributional regression, ordinal regression, transformation models},
+doi = {https://doi.org/10.1002/bimj.202100379},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/bimj.202100379},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/bimj.202100379},
+abstract = {Abstract In many medical applications, interpretable models with high prediction performance are sought. Often, those models are required to handle semistructured data like tabular and image data. We show how to apply deep transformation models (DTMs) for distributional regression that fulfill these requirements. DTMs allow the data analyst to specify (deep) neural networks for different input modalities making them applicable to various research questions. Like statistical models, DTMs can provide interpretable effect estimates while achieving the state-of-the-art prediction performance of deep neural networks. In addition, the construction of ensembles of DTMs that retain model structure and interpretability allows quantifying epistemic and aleatoric uncertainty. In this study, we compare several DTMs, including baseline-adjusted models, trained on a semistructured data set of 407 stroke patients with the aim to predict ordinal functional outcome three months after stroke. We follow statistical principles of model-building to achieve an adequate trade-off between interpretability and flexibility while assessing the relative importance of the involved data modalities. We evaluate the models for an ordinal and dichotomized version of the outcome as used in clinical practice. We show that both tabular clinical and brain imaging data are useful for functional outcome prediction, whereas models based on tabular data only outperform those based on imaging data only. There is no substantial evidence for improved prediction when combining both data modalities. Overall, we highlight that DTMs provide a powerful, interpretable approach to analyzing semistructured data and that they have the potential to support clinical decision-making.},
+year = {2023}
+}
+
 
